pull request for  database-loader into master (#3)
* Jwt-Token-implementation

* JWT Implementation and Register Student and Tutor Services

* Added entity and relationship between Course-Lesson and Lesson-Quiz

* entity and relationship modified

* entity and relationship

* login/registration - related Service

* working on relationship

* fixing

* Official relationship, we need to see for QuizStudent and quiz-student-result

* Working on Course Services

* fixing relationship

* Created Service getDedicatedCourses for users

* working on services of Course and User and Ability associated, Dtos , ModelMapper, Repositories, Controllers, Utilities, Exception, Custom ApiResponse

* Official getDedicatedCourses

* Official getDedicatedCourses Service

* Added Dtos,Exception,Mapper for ability course user and role, Modfied JwtAuthenticationEntrypoint, completed CourseController

* Added Auditing

* Auditing on Course and Lesson

* Added attribute in Question/QuestionDto for 'score'

* added a service, repo, for lesson and content

* Changes about relationship

* Course Lesson and Dtos

* fixing

* Creating AbilityCourseController

* Modified DTos

* Modified DTos

* Added Service for AbilityCourse

* official

* Added auditing for Quiz

* Added Ability-User/Ability-Course Controllers/Services

* Working on content type

* Added Services for users 'DedicatedCourses'

* Added update Course

* Working on Course - LEsson

* merged source/develop into jwt-token

* Fixed control for backGround image

* Fixed control for backGround image

* Fixed Service about findallLesson

* Fixed Service about findallLesson

* Fixed variables

* Changing attribute

* Added Lessons Services

* Added Lessons Services

* Working on CourseLessonController

* Completed CourseLessonController

* Completing RestControllers

* Completing RestControllers

* Working on Controllers

* Working on Controlle