@@ -1,22 +1,22 @@
 package com.fincons.mapper;
 
-import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fincons.dto.AbilityCourseDto;
 import com.fincons.entity.AbilityCourse;
 import org.modelmapper.ModelMapper;
-import org.modelmapper.convention.MatchingStrategies;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
-@JsonInclude(JsonInclude.Include.NON_NULL)
 public class AbilityCourseMapper {
 
     private static final ModelMapper modelMapper = new ModelMapper();
 
+    @Autowired
     private AbilityMapper abilityMapper;
+
+    @Autowired
     private CourseMapper courseMapper;
 
     public AbilityCourseDto mapAbilityCourseToAbilityCourseDto(AbilityCourse abilityCourse){
@@ -30,12 +30,12 @@ public class AbilityCourseMapper {
     public List<AbilityCourseDto> mapAbilityCourseListToAbilityCourseDtoList(List<AbilityCourse> abilityCourseList) {
         return abilityCourseList.stream()
                 .map(this::mapAbilityCourseToAbilityCourseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<AbilityCourse> mapAbilityCourseDtoListToAbilityCourseList(List<AbilityCourseDto> abilityCourseDtoList) {
         return abilityCourseDtoList.stream()
                 .map(this::mapDtoToAbilityCourse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
